# codex

./: .bazelrc  AGENT.md  INTEGRATION.md  README.md
.github/workflows/: bazel.yml
budget-guard/: .budget.toml  Cargo.toml  README.md  budget_guard.py
budget-guard/examples/: basic_budget.rs  integrated.rs  phase_demo.rs  team_usage.rs
budget-guard/hooks/: README.md  model-select.sh  post-command.sh
budget-guard/src/: lib.rs
budget-guard/tests/: test_budget_guard.py
codex-rs/analytics/src/: facts.rs
codex-rs/app-server/: README.md
codex-rs/app-server-protocol/schema/json/: PermissionsRequestApprovalParams.json  ServerNotification.json  (+3 more)
codex-rs/app-server/src/: bespoke_event_handling.rs  lib.rs  outgoing_message.rs  request_processors.rs
codex-rs/cli/src/: main.rs
codex-rs/cloud-config/src/: service.rs  service_tests.rs  validation.rs
codex-rs/config/src/: config_requirements.rs  types.rs
codex-rs/core/: config.schema.json
codex-rs/core/src/: client.rs  client_common.rs  codex_thread.rs  compact_remote.rs  compact_remote_v2.rs  mcp_tool_call.rs  mcp_tool_call_tests.rs  shell_snapshot.rs  shell_snapshot_tests.rs  thread_manager_tests.rs
codex-rs/exec-server/src/: lib.rs
codex-rs/exec/src/: lib.rs
codex-rs/protocol/src/: protocol.rs
codex-rs/rollout/src/: policy.rs
codex-rs/state/src/: lib.rs  telemetry.rs
codex-rs/tui/src/: app.rs  app_event.rs  app_server_session.rs  chatwidget.rs  debug_config.rs  external_agent_config_migration_startup.rs  lib.rs  slash_command.rs
memory/: JOURNAL.md
patches/: v8_bazel_rules.patch
(+51 files in other folders)
