[package]
name = "codex-budget-guard"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "🏆 Budget enforcement for Codex CLI — daily/weekly/monthly token limits, phase detection, auto-throttle, and audit logging."
repository = "https://github.com/SuperInstance/codex"
keywords = ["codex", "token", "budget", "conservation", "throttle"]

[dependencies]
conservation-checker = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"

[dev-dependencies]
tempfile = "3"

[[example]]
name = "basic_budget"
path = "examples/basic_budget.rs"

[[example]]
name = "integrated"
path = "examples/integrated.rs"

[[example]]
name = "phase_demo"
path = "examples/phase_demo.rs"

[[example]]
name = "team_usage"
path = "examples/team_usage.rs"
